--- a/Memes.html
+++ b/Memes.html
@@ -27,11 +27,9 @@ Memes
 <br>
 <img src="mycode.png" alt="Sorry, this meme can't appear on this browser/device.">
 <br>
-  <!<legend><!Do you like this new meme style?</legend>
-  <!<label for="the_question"><!Yes, quite nice.</label>
-<!<input type="checkbox" name="the_question" id="the_question" value="1">
-<!<label for="the_question"><!No, go back to the old style..</label>
-<!<input type="checkbox" name="the_question" id="the_question" value="0">
-<!<br>
+<img src="mycode.png" alt="Sorry, this meme can't appear on this browser/device.">
+<br>
+<img src="RoomClean.gif" alt="Sorry, this meme can't appear on this browser/device.">
+<br>
 <button onclick="window.location.href = 'index.html';">Back to Home Page</button>
 </html>
