--- a/Memes.html
+++ b/Memes.html
@@ -27,9 +27,7 @@ Memes
 <br>
 <img src="mycode.png" alt="Sorry, this meme can't appear on this browser/device.">
 <br>
-<img src="mycode.png" alt="Sorry, this meme can't appear on this browser/device.">
-<br>
-<img src="RoomClean.gif" alt="Sorry, this meme can't appear on this browser/device.">
+<img src="RoomClean.gif" alt="Sorry, this meme can't appear on this browser/device." height="400" width="650">
 <br>
 <button onclick="window.location.href = 'index.html';">Back to Home Page</button>
 </html>
