--- a/Games.html
+++ b/Games.html
@@ -23,5 +23,7 @@ Games
 <br>-->
 <button onclick="window.location.href = 'Wheely7.html';">Wheely 7</button>
 <br>
+<button onclick="window.location.href = 'PacMan.html';">Pac-Man</button>
+<br>
 <button onclick="window.location.href = 'index.html';">Back to Home Page</button>
 </html>
