--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <html>
 <head>
 <title>Home Page</title>
- <script>
+ <!--<script>
 var x = Math.random()*10+1;
 if (x = 1) {
   window.location = "TrollMessage.html";
 }
- </script>
+ </script>-->
 </head>
 <h1>
 Puzzle Dude98's Wonderful Site
