--- a/PacMan.html
+++ b/PacMan.html
@@ -63,7 +63,7 @@ google.dom.append(a)}}function e(){if(document.f&&document.f.btnI)document.f.btn
 ~~~~~~~~~~~~~~~~~~
 <h3>0</h3>
 <br>
-Wanna beat the high score? Email a video of you beating it to puzzledude98.github.io, along with the score!
+Wanna beat the high score? Email a video of you beating it to puzzledude98@outlook.com, along with the score!
 <br>
 <button onclick="window.location.href = 'index.html';">Back to Home Page</button>
 </html>
