--- a/Memes.html
+++ b/Memes.html
@@ -29,5 +29,7 @@ Memes
 <br>
 <img src="RoomClean.gif" alt="Sorry, this meme can't appear on this browser/device." height="400" width="650">
 <br>
+<img src="Solving Bugs.jpg" alt="Sorry, this meme can't appear on this browser/device." height="400" width="650">
+<br>
 <button onclick="window.location.href = 'index.html';">Back to Home Page</button>
 </html>
