Added E-mail Links

--- a/Memes.html
+++ b/Memes.html
@@ -6,6 +6,7 @@
 <h3>
 Memes
 </h3>
+<h1>You can suggest memes to put on here by e-mailing <a href="mailto:puzzledude98@outlook.com">puzzledude98@outlook.com</a> your memes!*</h1>
 </p>
 <img src="gru.jpg" alt="Sorry, this meme can't appear on this browser/device.">
 <br>
@@ -32,4 +33,6 @@ Memes
 <img src="Solving Bugs.jpg" alt="Sorry, this meme can't appear on this browser/device." height="400" width="650">
 <br>
 <button onclick="window.location.href = 'index.html';">Back to Home Page</button>
+<br>
+*Not all memes will be accepted due to various reasons
 </html>
