--- a/index.html
+++ b/index.html
@@ -30,7 +30,5 @@ Puzzle Dude98's Wonderful Site
   <br>
   <button onclick="window.location.href = 'http://www.geekprank.com/cracked-screen/';">Cracked Screen Prank</button>
  <br>
- <h3><i>Please e-mail all suggestions and comments to puzzledude98@outlook.com</i></h3>
-<br>
-We are changing from links to buttons that link and replacing all of them may take a while, expect inconsistencies.
+ <h3><i>Please e-mail all suggestions and comments to <a href="mailto:puzzledude98@outlook.com">puzzledude98@outlook.com</a></i></h3>
 </html>
