Update e-mail links

--- a/Jokes.html
+++ b/Jokes.html
@@ -8,7 +8,7 @@ Jokes
 </h2>
 </p>
 <br>
-<h3>Got jokes you want to see on here? E-mail them to <a href="mailto:puzzledude98@outlook.com">puzzledude98@outlook.com</a>!</h3>
+<h3>Got jokes you want to see on here? E-mail them to <a href="mailto:puzzledude98@outlook.com?subject=Joke%20Suggestion">puzzledude98@outlook.com</a>!</h3>
 <br>
 The buttons read jokes, and clicking on them pops up a punchline!
 <button onclick="alert('Example punchline');">Example joke</button>
