--- a/index.html
+++ b/index.html
@@ -30,5 +30,5 @@ Puzzle Dude98's Wonderful Site
   <br>
   <button onclick="window.location.href = 'http://www.geekprank.com/cracked-screen/';">Cracked Screen Prank</button>
  <br>
- <h3><i>Please e-mail all suggestions and comments to <a href="mailto:puzzledude98@outlook.com">puzzledude98@outlook.com</a></i></h3>
+ <h3><i>Please e-mail all suggestions and comments to <a href="mailto:puzzledude98@outlook.com?subject=Suggestion/Comment">puzzledude98@outlook.com</a></i></h3>
 </html>
