--- a/Memes.html
+++ b/Memes.html
@@ -6,7 +6,7 @@
 <h3>
 Memes
 </h3>
-<h1>You can suggest memes to put on here by e-mailing <a href="mailto:puzzledude98@outlook.com">puzzledude98@outlook.com</a> your memes!*</h1>
+<h1>You can suggest memes to put on here by e-mailing <a href="mailto:puzzledude98@outlook.com?subject=Meme%20Suggestion">puzzledude98@outlook.com</a> your memes!*</h1>
 </p>
 <img src="gru.jpg" alt="Sorry, this meme can't appear on this browser/device.">
 <br>
