--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ Puzzle Dude98's Wonderful Site
  <br>
  <button onclick="window.location.href = 'Memes.html';">Memes</button>
  <br>
-<button onclick="window.location.href = 'Jokes.html';">Jokes</button>
+<button onclick="window.location.href = 'jokes.html';">Jokes</button>
 <br>
  <!--<a href="Suggestions.html"><!Suggestions and Comments</a>
  <br>-->
