--- a/index.html
+++ b/index.html
@@ -12,13 +12,11 @@ if (x = 1) {
 Puzzle Dude98's Wonderful Site
 </h1>
  <p><h2><i>Where content is our priority, not looks!</i></h2></p>
- <button onclick="window.location.href = 'LeonardoDaVinci.html';">Leonardo da Vinci</button>
- <br>
  <button onclick="window.location.href = 'Games.html';">Games</button>
  <br>
  <button onclick="window.location.href = 'MusicPlaylist.html';">Music</button>
  <br>
- <button onclick="window.location.href = 'Memes.html';">Memes</button>
+ <button onclick="window.location.href = 'Mmemes.html';">Memes</button>
  <br>
 <button onclick="window.location.href = 'jokes.html';">Jokes</button>
 <br>
