--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ Puzzle Dude98's Wonderful Site
  <br>
  <button onclick="window.location.href = 'MusicPlaylist.html';">Music</button>
  <br>
- <button onclick="window.location.href = 'Mmemes.html';">Memes</button>
+ <button onclick="window.location.href = 'memes.html';">Memes</button>
  <br>
 <button onclick="window.location.href = 'jokes.html';">Jokes</button>
 <br>
