--- a/index.html
+++ b/index.html
@@ -1,28 +1,20 @@
 <html>
 <head>
 <title>Home Page</title>
- <!--<script>
-var x = Math.random()*10+1;
-if (x = 1) {
-  window.location = "TrollMessage.html";
-}
- </script>-->
 </head>
 <h1>
 Puzzle Dude98's Wonderful Site
 </h1>
  <p><h2><i>Where content is our priority, not looks!</i></h2></p>
- <button onclick="window.location.href = 'Games.html';">Games</button>
+ <button onclick="window.location.href = 'games.html';">Games</button>
  <br>
- <button onclick="window.location.href = 'MusicPlaylist.html';">Music</button>
+ <button onclick="window.location.href = 'music.html';">Music</button>
  <br>
  <button onclick="window.location.href = 'memes.html';">Memes</button>
  <br>
 <button onclick="window.location.href = 'jokes.html';">Jokes</button>
 <br>
- <!--<a href="Suggestions.html"><!Suggestions and Comments</a>
- <br>-->
-<button onclick="window.location.href = 'ScratchSaga.html';">Scratch Saga</button> (Visit <a href="http://www.scratch.mit.edu">scratch</a> to get familiar with it first)
+<button onclick="window.location.href = 'scratchsaga.html';">Scratch Saga</button> (Visit <a href="http://www.scratch.mit.edu">scratch</a> to get familiar with it first)
 <br> 
 <button onclick="window.location.href = 'http://www.geekprank.com/hacker/';">Hacker Prank</button>
   <br>
