--- a/feedmemoar.html
+++ b/feedmemoar.html
@@ -9,5 +9,5 @@ Feed Me Moar
 </p>
 <embed width="700" height="525" base="https://external.kongregate-games.com/gamez/0017/3713/live/" src="https://external.kongregate-games.com/gamez/0017/3713/live/embeddable_173713.swf" type="application/x-shockwave-flash"></embed>
 <br>
-<button onclick="window.location.href = 'index.html';">Back to Home Page</button>
+<button onclick="window.location.href = 'index';">Back to Home Page</button>
 </html>
