--- a/pacman.html
+++ b/pacman.html
@@ -65,5 +65,5 @@ google.dom.append(a)}}function e(){if(document.f&&document.f.btnI)document.f.btn
 <br>
 Wanna beat the high score? Email a video of you beating it to <a href="mailto:puzzledude98@outlook.com?subject=Pac-Man%20High%20Score">puzzledude98@outlook.com</a>, along with the score!
 <br>
-<button onclick="window.location.href = 'index.html';">Back to Home Page</button>
+<button onclick="window.location.href = 'index';">Back to Home Page</button>
 </html>
