--- a/papalouie.html
+++ b/papalouie.html
@@ -9,6 +9,6 @@ Papa Louie
 <embed width=1100 height=800 src="papalouie/papalouie_v2.swf">
 </p>
 <p>
-<button onclick="window.location.href = 'index.html';">Back to Home Page</button>
+<button onclick="window.location.href = 'index';">Back to Home Page</button>
 </p>
 </html>
