--- a/stickyninjaacademy.html
+++ b/stickyninjaacademy.html
@@ -10,4 +10,4 @@ Sticky Ninja
 <br>
 <embed width="750" height="500" base="https://external.kongregate-games.com/gamez/0012/8734/live/" src="https://external.kongregate-games.com/gamez/0012/8734/live/embeddable_128734.swf" type="application/x-shockwave-flash"></embed>
 <br>
-<button onclick="window.location.href = 'index.html';">Back to Home Page</button>
+<button onclick="window.location.href = 'index';">Back to Home Page</button>
