--- a/wheely7.html
+++ b/wheely7.html
@@ -8,5 +8,5 @@ Wheely 7
 <br>
 <embed width="100%" height="100%" src="http://www.pegasgames.com/games/Wheely7.swf" type="application/x-shockwave-flash" fullscreen="yes">
 <br>
-<button onclick="window.location.href = 'index.html';">Back to Home Page</button>]
+<button onclick="window.location.href = 'index';">Back to Home Page</button>]
 </html>
