--- a/music.html
+++ b/music.html
@@ -1,11 +1,11 @@
 <html>
 <head>
-<title>Music</title
+  <title>Music</title>
 </head>
 <p>
-<h3>
+<h1>
 Music Playlist
-</h3>
+</h1>
 </p>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLTsyreKljN_cGKfx_l4YdGDG0XgZuInYP" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <br>
