--- a/iready.html
+++ b/iready.html
@@ -1,3 +1,4 @@
 <html>
 <canvas width="800" height="600" style="width: 800px; height: 600px; display: block; -ms-user-select: none; touch-action: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0);"></canvas></html>
+<div class="css-1b8w8q1 e2i71630"><div class="css-1s4j649"><div class="css-1ninoqa" id="game-wrapper"><iframe width="800" height="600" title="Game" id="game" src="//cdn.i-ready.com/instruction/reward-games/v1.1.x/1/game-bubbles/" frameborder="0" scrolling="no" allowtransparency="false" allow="autoplay"></iframe></div></div></div>
 </html>
