--- a/LeonardosImpact.html
+++ b/LeonardosImpact.html
@@ -17,5 +17,7 @@ Leonardo's Ideas and Impact
   <br>
   <a href="LeonardoQuiz.html">Leonardo da Vinci Quiz</a>
   <br>
+  <a href="wave">Leonardo da Vinci Quiz</a>
+  <br>
 <button onclick="window.location.href = 'index.html';">Back to Home Page</button>
 </html>
