--- a/schoology.html
+++ b/schoology.html
@@ -17,7 +17,7 @@
         <link rel="stylesheet" type="text/css" href="https://assets.powerschool.com/pds/20.2.0/css/pds-components-shim.css" />
         <!-- End PowerSchool App Switcher -->
     
-    <title>NSD PRE-IB ENGLISH 9: (S1) LOBB, M /HANSEN NSD PRE-IB ENGLISH 9(2) | Schoology</title>
+    <title>TEACHER GRANTED</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link rel="shortcut icon" href="/sites/all/themes/schoology_theme/favicon.ico" type="image/x-icon" />
 <meta name="format-detection" content="telephone=no">
@@ -259,7 +259,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","s_common":{"csrf_key":"qvJd2N9E
 </script>
 <script type="text/javascript">
 <!--//--><![CDATA[//><!--
-window._initPendo({"id":"e47998e2c28460c4361591c676b9cb3a","gender":"","accountCreationDate":"2020-07-28 11:28:18","isFaculty":false,"isParent":false,"isSchoolAdmin":false,"isTeacher":false,"isAdvisor":false,"isStudent":true,"customRole":"student","numCoursesEnrolled":28,"numCoursesTaught":0,"numSchoolGroupsAsMember":4,"numSchoolGroupsAsOwner":1,"numPublicGroupsAsMember":0}, {"country":"US","state":"WA","zip":"98021","schoolType":"k-12","customizedUI":false,"featurePackage":"enterprise","sgyId":141451,"organizationNid":"2669500579","buildingNid":"2669500579","id":"141451"},"9d267eb0-c5a6-41fb-786d-8ec2c4e691cc")
+window._initPendo({"id":"e47998e2c28460c4361591c676b9cb3a","gender":"","accountCreationDate":"2020-07-28 11:28:18","isFaculty":false,"isParent":false,"isSchoolAdmin":false,"isTeacher":true,"isAdvisor":false,"isStudent":false,"customRole":"student","numCoursesEnrolled":28,"numCoursesTaught":0,"numSchoolGroupsAsMember":4,"numSchoolGroupsAsOwner":1,"numPublicGroupsAsMember":0}, {"country":"US","state":"WA","zip":"98021","schoolType":"k-12","customizedUI":false,"featurePackage":"enterprise","sgyId":141451,"organizationNid":"2669500579","buildingNid":"2669500579","id":"141451"},"9d267eb0-c5a6-41fb-786d-8ec2c4e691cc")
 //--><!]]>
 </script>
 <script type="text/javascript">
