--- a/iready.html
+++ b/iready.html
@@ -3,4 +3,16 @@
 <div class="css-1b8w8q1 e2i71630"><div class="css-1s4j649"><div class="css-1ninoqa" id="game-wrapper"><iframe width="800" height="600" title="Game" id="game" src="//cdn.i-ready.com/instruction/reward-games/v1.1.x/1/game-bubbles/" frameborder="0" scrolling="no" allowtransparency="false" allow="autoplay"></iframe></div></div></div>
 <iframe width="800" height="600" title="Game" id="game" src="//cdn.i-ready.com/instruction/reward-games/v1.1.x/1/game-bubbles/" frameborder="0" scrolling="no" allowtransparency="false" allow="autoplay"></iframe>
  --> <a href="//cdn.i-ready.com/instruction/reward-games/v1.1.x/1/game-bubbles/">Wizard Pinball</a>
+ <br>
+ <a href="https://cdn.i-ready.com/instruction/reward-games/v1.3.x/2/game-lanerunner/">Galaxy Sprint</a>
+ <br>
+ <a href="//cdn.i-ready.com/instruction/reward-games/v1.1.x/1/game-bubbles/">Wizard Pinball</a>
+ <br>
+ <a href="https://cdn.i-ready.com/instruction/game-catstacker/1.6.x/2/">Cat Stacker</a>
+ <br>
+ <a href="https://cdn.i-ready.com/instruction/game-hpr/1.4.x/2/">Path Spinners</a>
+ <br>
+ <a href="https://cdn.i-ready.com/instruction/reward-games/v1.3.x/2/game-minedigger/">Dig Site</a>
+  <br>
+ <a href="https://cdn.i-ready.com/instruction/game-begooped/1.3.x/2/">Begooped</a>
 </html>
